--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,11 +1,18 @@
 .header {
   display: flex;
+  align-items: center;
   justify-content: center;
-  margin-bottom: 30px;
+  padding: 20px;
 }
 
-.title {
+.header__title {
   font-size: 50px;
+  font-family: 'Luckiest Guy', cursive;
+  letter-spacing: 3px;
   color: #333;
   padding: 30px 0 0 0;
+}
+
+.header__img {
+  width: 80px;
 }
