--- a/src/components/Pages/Home/Home.css
+++ b/src/components/Pages/Home/Home.css
@@ -1,40 +1,40 @@
-.content {
+.home__container {
   display: flex;
   justify-content: space-around;
 }
-
-.setting {
+.home__banner {
+  width: 55%;
+  align-self: center;
+  padding: 10px;
+}
+.home__setting {
   width: 45%;
   padding: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
-.banner {
-   width: 55%;
-   align-self: center;
-   padding: 10px;
+.home__title {
+  font-size: 24px;
+  color: #303F9F;
 }
-
 .setting__select {
   display: flex;
   flex-direction: column;
   padding: 20px;
   width: 100%;
-  flex: 0.8;
   justify-content: space-evenly;
 }
 
 @media screen and (max-width: 800px) {
-   .content {
+   .home__container {
      flex-direction: column;
      align-items: center;
    }
-   .setting {
+   .home__setting {
      width: 100%;
    }
-   .banner {
+   .home__banner {
       width: 85%;
       padding: 0;
       padding-top: 20px;
