--- a/src/components/Pages/Result/Result.css
+++ b/src/components/Pages/Result/Result.css
@@ -2,6 +2,16 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   height: 60vh;
   text-align: center;
+}
+
+.result__img {
+  width: 100px;
+  margin-bottom: 20px;
+}
+
+.result__title {
+  font-size: 26px;
 }
